# wasm-worker

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  wrangler.toml
src/: lib.rs
worker/: metadata.json  worker.js
